--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
 
-  <link rel="alternate" href="/atom.xml" title="guozhongqiang" type="application/atom+xml" />
+  <link rel="alternate" href="/atom.xml" title="Learning" type="application/atom+xml" />
 
 
 
@@ -110,13 +110,13 @@
 
 <meta name="description" content="Easy Lippi">
 <meta property="og:type" content="website">
-<meta property="og:title" content="guozhongqiang">
+<meta property="og:title" content="Learning">
 <meta property="og:url" content="http://guozhongqiang.github.io/index.html">
-<meta property="og:site_name" content="guozhongqiang">
+<meta property="og:site_name" content="Learning">
 <meta property="og:description" content="Easy Lippi">
 <meta property="og:locale" content="zh-Hans">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="guozhongqiang">
+<meta name="twitter:title" content="Learning">
 <meta name="twitter:description" content="Easy Lippi">
 
 
@@ -176,7 +176,7 @@
   </script>
 
 
-  <title> guozhongqiang </title>
+  <title> Learning </title>
 </head>
 
   	 <!-- custom analytics part create by xiamo -->
@@ -302,7 +302,7 @@ $(function() {
   <div class="custom-logo-site-title">
     <a href="/"  class="brand" rel="start">
       <span class="logo-line-before"><i></i></span>
-      <span class="site-title">guozhongqiang</span>
+      <span class="site-title">Learning</span>
       <span class="logo-line-after"><i></i></span>
     </a>
   </div>
@@ -436,9 +436,9 @@ $(function() {
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="guozhongqiang">
+    <meta itemprop="name" content="Learning">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="guozhongqiang" src="/images/avatar.jpg">
+      <img style="display:none;" itemprop="url image" alt="Learning" src="/images/avatar.jpg">
     </span>
   </span>
 
@@ -633,9 +633,9 @@ $(function() {
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="guozhongqiang">
+    <meta itemprop="name" content="Learning">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="guozhongqiang" src="/images/avatar.jpg">
+      <img style="display:none;" itemprop="url image" alt="Learning" src="/images/avatar.jpg">
     </span>
   </span>
 
@@ -830,9 +830,9 @@ $(function() {
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="guozhongqiang">
+    <meta itemprop="name" content="Learning">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="guozhongqiang" src="/images/avatar.jpg">
+      <img style="display:none;" itemprop="url image" alt="Learning" src="/images/avatar.jpg">
     </span>
   </span>
 
@@ -1027,9 +1027,9 @@ $(function() {
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="guozhongqiang">
+    <meta itemprop="name" content="Learning">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="guozhongqiang" src="/images/avatar.jpg">
+      <img style="display:none;" itemprop="url image" alt="Learning" src="/images/avatar.jpg">
     </span>
   </span>
 
@@ -1224,9 +1224,9 @@ $(function() {
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="guozhongqiang">
+    <meta itemprop="name" content="Learning">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="guozhongqiang" src="/images/avatar.jpg">
+      <img style="display:none;" itemprop="url image" alt="Learning" src="/images/avatar.jpg">
     </span>
   </span>
 
@@ -1421,9 +1421,9 @@ $(function() {
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="guozhongqiang">
+    <meta itemprop="name" content="Learning">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="guozhongqiang" src="/images/avatar.jpg">
+      <img style="display:none;" itemprop="url image" alt="Learning" src="/images/avatar.jpg">
     </span>
   </span>
 
@@ -1618,9 +1618,9 @@ $(function() {
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="guozhongqiang">
+    <meta itemprop="name" content="Learning">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="guozhongqiang" src="/images/avatar.jpg">
+      <img style="display:none;" itemprop="url image" alt="Learning" src="/images/avatar.jpg">
     </span>
   </span>
 
@@ -1815,9 +1815,9 @@ $(function() {
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="guozhongqiang">
+    <meta itemprop="name" content="Learning">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="guozhongqiang" src="/images/avatar.jpg">
+      <img style="display:none;" itemprop="url image" alt="Learning" src="/images/avatar.jpg">
     </span>
   </span>
 
@@ -2016,9 +2016,9 @@ $(function() {
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="guozhongqiang">
+    <meta itemprop="name" content="Learning">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="guozhongqiang" src="/images/avatar.jpg">
+      <img style="display:none;" itemprop="url image" alt="Learning" src="/images/avatar.jpg">
     </span>
   </span>
 
@@ -2213,9 +2213,9 @@ $(function() {
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="guozhongqiang">
+    <meta itemprop="name" content="Learning">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="guozhongqiang" src="/images/avatar.jpg">
+      <img style="display:none;" itemprop="url image" alt="Learning" src="/images/avatar.jpg">
     </span>
   </span>
 
